src/styles/ReminderCard.css
.reminder-main-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    gap: 32px;
}

.reminder-main-content-wrapper{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 75%;
    gap: 16px;
}

.reminder-image-container{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80%;
    height: 60%;
    border-radius: 16px;
    border: 1px solid #55BDE5;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
    overflow: hidden;
}

.reminder-image-container img{
    width:100%;
    height:100%;
    object-fit: cover;
}

.reminder-text-container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 80%;
    height:40%;
    border-radius: 16px;
    border: 1px solid #55BDE5;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
    overflow: scroll;
    padding: 16px;
}

.reminder-text{
    font-weight: bold;
    font-size: 4rem;
    word-wrap: break-word;
    color: #146887;
    text-align: center;
}

.reminder-subtitle{
    font-weight: normal;
    font-size: 1.75rem;
    word-wrap: break-word;
    color: #146887;
    text-align: center;
}


.done-btn {
    font-size:16px;
    color: #146887;
    font-weight: 500;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    padding-left:1rem;
    padding-right:1rem;
    background-color: white;
    border-radius: 8px;
    border: 0.75px solid #9CA3AF;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px
}

.done-btn-check-icon{
    height: 1.5rem;
    width: 1.5rem;
    margin-bottom: 4px;
}

